kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-web
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: training-web
